# data_quality_workshop

./: README.md  pyproject.toml
.github/workflows/: CI.yml
app/: funcao.py  schema.py
docs/: index.md
exemplo/: exemplo002.py
sql/: create_table_produtos_bronze.sql  create_table_produtos_bronze_email.sql  insert_into_tabela_bronze.sql  insert_into_tabela_bronze_email.sql  insert_wrong_values_into_tabela_bronze.sql
tests/: test_funcao_ola.py
